--- a/index.html
+++ b/index.html
@@ -16665,7 +16665,7 @@ strong multicollinearity problems or that the design matrix is singular.
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>Next, we decided to look into the frequency distribution of our transfer values and we can see that there is a strong right skew which isn't good. In order to make the data more usable I decided to try a logarithmic trnasformation</p>
+<p>Next, we decided to look into the frequency distribution of our transfer values and we can see that there is a strong right skew which isn't good. In order to make the data more usable I decided to try a logarithmic transformation</p>
 
 </div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
@@ -16726,7 +16726,7 @@ strong multicollinearity problems or that the design matrix is singular.
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>This clearly produced much better results as the data looks much more like a normal distibution with the logarithmic trnasformation of the transfer values</p>
+<p>This clearly produced much better results as the data looks much more like a normal distibution with the logarithmic transformation of the transfer values</p>
 
 </div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
